Trying to resolve margin between pages on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,7 @@ ol.ol-list>li+li {
     width: 65%;
     margin: 0.2em;
     object-fit: contain;
+    background-size: cover;
 }
 
 #controls {
